# HexProject

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
assets/Player1Select/: Heuristic.png:Zone.Identifier
config/: volume_config.txt
docs/: hex.aux  hex.fdb_latexmk  hex.fls  hex.tex
docs/pages/: architecture_overview.md  core.md  gnn.md  installation.md  introduction.md  oop.md  project_structure.md  selfplay.md  ui.md
docs/sections/: ProjectStructure.tex  install.tex  introduction.tex  poo.tex
docs/sections/StructureSubsections/: Integration.tex  Layout.tex  Multimedia.tex  UI-UX.tex  UX.tex  core.tex  gnn.tex  selfplay.tex
include/: Board.hpp  Cube.hpp  GameState.hpp  MoveStrategy.hpp  Player.hpp
include/core/: Board.hpp  Cube.hpp  GameState.hpp  MoveStrategy.hpp  Player.hpp
include/gnn/: FeatureExtractor.hpp  GNNModel.hpp  Graph.hpp
include/ui/: HexGameUI.hpp  HexTile.hpp  ImageViewer.hpp
rapport_hex/: rapport_hex_ieee.aux  rapport_hex_ieee.fdb_latexmk  rapport_hex_ieee.fls  rapport_hex_ieee.tex
scripts/: installer_windows.iss  package_linux_cpu.sh  package_linux_deb.sh  package_windows_cpu.ps1  train_gnn.py  train_value_mlp_emulate_heuristic.py
scripts/models/: hex_value.pt  hex_value_ts.pt  hex_value_ts_mp.pt  value_mlp_state.pt
scripts/scripts/models/: hex_value_ts.pt
selfplay/: CMakeLists.txt  DataCollector.cpp  DataCollector.hpp  GameRunner.cpp  GameRunner.hpp  RLTrainer.cpp  RLTrainer.hpp  ReplayBuffer.cpp  ReplayBuffer.hpp  Serializer.cpp  Serializer.hpp  ValueMLP.cpp  ValueMLP.hpp  main.cpp
selfplay/gnn/: DataCollector.cpp  DataCollector.hpp  GameRunner.cpp  GameRunner.hpp  Serializer.cpp  Serializer.hpp  maingnn.cpp
selfplay/mlp/: RLTrainer.cpp  RLTrainer.hpp  ReplayBuffer.cpp  ReplayBuffer.hpp  ValueMLP.hpp
src/: Board.cpp  Cube.cpp  GameState.cpp  MoveStrategy.cpp  Player.cpp  main.cpp
src/cli/: main.cpp
src/core/: Board.cpp  Cube.cpp  GameState.cpp  MoveStrategy.cpp  Player.cpp
src/gnn/: FeatureExtractor.cpp  GNNModel.cpp  Graph.cpp
src/ui/: HexGameUI.cpp  HexGameUI_updateVolumeIcon.cpp  HexTile.cpp  ImageViewer.cpp  main.cpp
