[project]
name = "hexproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago23florido", email = "sanflogom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["torch (>=2.5.1,<3.0.0)", "torchvision (>=0.20.1,<0.21.0)", "torchaudio (>=2.5.1,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Fuente secundaria SOLO para paquetes de PyTorch CUDA 12.1
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}
